bluec-tests/tests/invalid/types_fn_pointer/bad_null_pointer_constant.c
int main(void)
{
    int (*fn)(void) = 0.0;
    return 0;
}